--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <meta name="description" content="StoryGame Studios’ first interactive thriller. An intense, player driven narrative awaits!">
     <link rel="stylesheet" href="style/index.scss">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src='https://www.googletagmanager.com/gtag/js?id=G-M40RM1BMTG'></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag("js", new Date());
+        gtag("config", "G-M40RM1BMTG");
+    </script>
+
     <meta property="og:title" content="StoryGame Studios">
     <meta property="og:description" content="Laverna Park Story Game">
-    <meta property="og:image" content="https://storygamestudios.com/meta-social.jpg">
     <meta property="og:url" content="https://storygamestudios.com">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="https://storygamestudios.com/meta-social-image.jpg">
 
+    <meta property="og:type" content="Website">
     <meta property="og:site_name" content="StoryGame Studios">
     <meta name="twitter:image:alt" content="Laverna Park">
 </head>
